#49843 Добавлен elipsize= end и maxLine =2

--- a/src/main/res/layout/item_auto_reply.xml
+++ b/src/main/res/layout/item_auto_reply.xml
@@ -36,5 +36,7 @@
         android:layout_height="wrap_content"
         android:drawablePadding="4dp"
         android:text="@string/settings_auto_greeting_subtitle"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:maxLines="2"
+        android:ellipsize="end" />
 </LinearLayout>
