--- a/src/main/res/layout/buy_button_ver_2.xml
+++ b/src/main/res/layout/buy_button_ver_2.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
             android:background="@{handler.buttonBackgroundRes}"
-            android:onClick="@{handler.onButtonClick}"
+            android:onClick="@{handler::onButtonClick}"
             android:visibility="@{handler.buttonVisibility}">
 
             <TextView
