--- a/src/main/res/layout/ok_profile_fragment.xml
+++ b/src/main/res/layout/ok_profile_fragment.xml
@@ -47,7 +47,7 @@
                 <Button
                     android:id="@+id/okProfileButtonTopfaceTeam"
                     style="@style/OkProfileButtons"
-                    android:onClick="@{handler.onButtonShowGroupClick}"
+                    android:onClick="@{handler::onButtonShowGroupClick}"
                     android:text="@string/vk_profile_button_tf_group"
                     android:visibility="@{handler.buttonVisibility}" />
 
