--- a/src/main/res/layout/left_menu_header.xml
+++ b/src/main/res/layout/left_menu_header.xml
@@ -13,7 +13,7 @@
     <FrameLayout
         android:layout_width="@dimen/left_menu_width"
         android:layout_height="@dimen/left_menu_header_height"
-        android:onClick="@{viewModel.onClick}">
+        android:onClick="@{viewModel::onClick}">
 
         <com.topface.topface.ui.views.ImageViewRemote
             style="@style/LeftMenuHeaderBackground"
