--- a/src/main/res/layout/own_fullscreen_layout.xml
+++ b/src/main/res/layout/own_fullscreen_layout.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|end"
-                android:onClick="@{click.onClick}"
+                android:onClick="@{click::onClick}"
                 android:padding="10dp"
                 android:src="@drawable/ic_close_dating_lock_popup" />
 
