--- a/src/main/res/layout/fragment_bonus1.xml
+++ b/src/main/res/layout/fragment_bonus1.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.topface.topface.ui.bonus.viewModel.BonusFragmentViewModel" />
+
+    </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,38 +19,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:visibility="visible" />
+            android:visibility="@{viewModel.offersVisibility}"
+            tools:visibility="gone" />
 
-        <RelativeLayout
-            android:id="@+id/emptyOfferwalls"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/emptyOfferImg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+            android:layout_height="match_parent"
+            android:background="@color/bg_white"
+            android:fillViewport="false"
+            android:visibility="@{viewModel.emptyViewVisibility}"
+            tools:visibility="visible">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/emptyOfferImg"
-                android:textSize="16sp"
+                android:layout_gravity="center"
+                android:drawablePadding="60dp"
+                android:drawableTop="@{viewModel.emptyViewIcon}"
+                android:gravity="center_horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="@{viewModel.emptyViewText}"
                 android:textColor="#232C35"
-                android:text="@string/preload_photo_type_preload_off"
-                android:gravity="center"
-                android:layout_centerHorizontal="true" />
-        </RelativeLayout>
-
-        <ProgressBar
-            android:id="@+id/prsOfferwalls"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:indeterminateDrawable="@drawable/auth_progressbar_drawable"
-            android:visibility="gone" />
+                android:textSize="16sp"
+                android:visibility="@{viewModel.emptyViewVisibility}"
+                tools:drawableTop="@drawable/ill_sorrow"
+                tools:text="@string/offers_empty_text"
+                tools:visibility="visible" />
+        </android.support.v4.widget.NestedScrollView>
     </RelativeLayout>
 </layout>
