--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="bg_light_blue">#EAF8FF</color>
     <color name="blue_60_percent">#99AEE5FD</color>
     <color name="black_60_percent">#99000000</color>
+    <color name="black_80_percent">#bb000000</color>
     <color name="text_color_gray">#333333</color>
     <color name="text_color_gray_transparent">#88333333</color>
 
