--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -125,6 +125,11 @@
     <dimen name="offerwalls_button_height">32dp</dimen>
     <dimen name="offerwalls_button_margin_left">10dp</dimen>
     <dimen name="offerwalls_button_padding_right">8dp</dimen>
+    <dimen name="offerwalls_image_width">46dp</dimen>
+    <dimen name="offerwalls_image_heighr">46dp</dimen>
+    <dimen name="offerwalls_list_margin_top">8dp</dimen>
+    <dimen name="offerwalls_empty_view_between_text_and_image">60dp</dimen>
+    <dimen name="offerwalls_empty_view_text_side_paddings">20dp</dimen>
 
 
     <dimen name="city_item_height">64dp</dimen>
