--- a/src/main/res/layout/offerwall_item.xml
+++ b/src/main/res/layout/offerwall_item.xml
@@ -18,7 +18,7 @@
     <LinearLayout
         style="@style/OfferwallItem"
         android:background="@drawable/main_item_selector"
-        android:onClick="@{clickListener.onClick}">
+        android:onClick="@{clickListener::onClick}">
 
         <com.topface.topface.ui.views.ImageViewRemote
             android:layout_width="@dimen/offerwalls_image_width"
