--- a/src/main/res/layout/app_of_the_day_layout.xml
+++ b/src/main/res/layout/app_of_the_day_layout.xml
@@ -20,12 +20,15 @@
         android:onClick="@{click}"
         android:orientation="horizontal">
 
+
         <com.topface.topface.ui.views.ImageViewRemote
             android:id="@+id/ifp_avatar_image"
-            style="@style/ListAvatar"
+            style="@style/AppOfDay"
             android:layout_marginRight="10dp"
             android:foreground="@drawable/feed_avatar_overlay_selector"
+            android:scaleType="centerCrop"
             app:remoteSrc="@{appOfTheDay.iconUrl}" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
