--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Widget"></style>
 
@@ -402,6 +402,10 @@
 
     <style name="ListItemEmptyText.Bold">
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppOfDay" parent="ListAvatar">
+        <item name="preProcessor">mask</item>
     </style>
 
     <style name="ListAvatar">
