--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -131,7 +131,8 @@
     <dimen name="offerwalls_empty_view_between_text_and_image">60dp</dimen>
     <dimen name="offerwalls_empty_view_text_side_paddings">20dp</dimen>
 
-
     <dimen name="city_item_height">64dp</dimen>
+
+    <dimen name="user_status_side_margin">6dp</dimen>
 
 </resources>
