--- a/src/main/res/layout/city_search_popup.xml
+++ b/src/main/res/layout/city_search_popup.xml
@@ -79,8 +79,11 @@
             android:background="@color/bg_white"
             android:drawableLeft="@drawable/ic_search"
             android:drawablePadding="16dp"
-            android:maxLines="1"
             android:gravity="center_vertical"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:lines="1"
+            android:maxLines="1"
             android:paddingLeft="16dp"
             android:text="@={viewModel.editTextObservable}" />
 
