--- a/src/main/res/layout/left_menu_item.xml
+++ b/src/main/res/layout/left_menu_item.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/new_bg_left_menu_item_selector"
-        android:onClick="@{clickListener.onClick}"
+        android:onClick="@{clickListener::onClick}"
         app:selected="@{viewModel.isSelected}">
 
         <View
