--- a/src/main/res/layout/promo_express_messages.xml
+++ b/src/main/res/layout/promo_express_messages.xml
@@ -1,94 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_white">
+    android:orientation="vertical">
 
     <LinearLayout
-        style="@style/EmptyFeedsViewGravity"
+        android:id="@+id/title_clickable"
+        style="@style/ActionBarItemClick"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="55dp"
+        android:background="@color/action_bar_color"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/up_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:src="@drawable/ic_home" />
+
+        <TextView
+            android:id="@+id/title"
+            style="@style/Widget.Topface.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="32dp"
+            android:text="@string/settings_messages"
+            android:visibility="visible" />
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_white">
 
         <LinearLayout
+            style="@style/EmptyFeedsViewGravity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/bg_white"
-            android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <LinearLayout
-                style="@style/LandscapePortraitImagesVisibility"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingBottom="44dp"
-                android:paddingTop="72dp">
+                android:background="@color/bg_white"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-                <com.topface.topface.ui.views.ImageViewRemote
-                    android:id="@+id/firstFakeUser"
+                <LinearLayout
+                    style="@style/LandscapePortraitImagesVisibility"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="8dp"
-                    android:src="@drawable/fake_girl1" />
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="44dp"
+                    android:paddingTop="72dp">
 
-                <com.topface.topface.ui.views.ImageViewRemote
-                    android:id="@+id/secondFakeUser"
+                    <com.topface.topface.ui.views.ImageViewRemote
+                        android:id="@+id/firstFakeUser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="8dp"
+                        android:src="@drawable/fake_girl1" />
+
+                    <com.topface.topface.ui.views.ImageViewRemote
+                        android:id="@+id/secondFakeUser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="8dp"
+                        android:src="@drawable/fake_girl2" />
+
+                    <com.topface.topface.ui.views.ImageViewRemote
+                        android:id="@+id/thirdFakeUser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/fake_girl3" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/airMessagesText"
+                    style="@style/TitleBlackText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="8dp"
-                    android:src="@drawable/fake_girl2" />
+                    android:gravity="center"
+                    android:maxWidth="320dp"
+                    android:paddingBottom="24dp"
+                    android:singleLine="false"
+                    android:textColor="@color/eighty_seven_opacity_from_black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
-                <com.topface.topface.ui.views.ImageViewRemote
-                    android:id="@+id/thirdFakeUser"
+                <Button
+                    android:id="@+id/buyVip"
+                    style="@style/Widget.Topface.Button.Big.Blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/fake_girl3" />
+                    android:layout_marginBottom="12dp"
+                    android:ellipsize="end"
+                    android:minWidth="@dimen/express_message_button_min_width"
+                    android:singleLine="true"
+                    android:text="@string/buying_vip_status" />
+
+                <Button
+                    android:id="@+id/deleteMessages"
+                    style="@style/Widget.Topface.Button.Big.Red"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:minWidth="@dimen/express_message_button_min_width"
+                    android:singleLine="true"
+                    android:text="@string/general_delete_messages" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/airMessagesText"
-                style="@style/TitleBlackText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:maxWidth="320dp"
-                android:paddingBottom="24dp"
-                android:singleLine="false"
-                android:textColor="@color/eighty_seven_opacity_from_black"
-                android:textSize="16sp"
-                android:textStyle="normal" />
-
-            <Button
-                android:id="@+id/buyVip"
-                style="@style/Widget.Topface.Button.Big.Blue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:ellipsize="end"
-                android:minWidth="@dimen/express_message_button_min_width"
-                android:singleLine="true"
-                android:text="@string/buying_vip_status" />
-
-            <Button
-                android:id="@+id/deleteMessages"
-                style="@style/Widget.Topface.Button.Big.Red"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:minWidth="@dimen/express_message_button_min_width"
-                android:singleLine="true"
-                android:text="@string/general_delete_messages" />
-
+            <com.topface.topface.ui.views.LockerView
+                android:id="@+id/ipLocker"
+                style="@style/LoadingLocker"
+                android:visibility="gone" />
         </LinearLayout>
 
-        <com.topface.topface.ui.views.LockerView
-            android:id="@+id/ipLocker"
-            style="@style/LoadingLocker"
-            android:visibility="gone" />
-    </LinearLayout>
-
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
