--- a/src/main/res/layout/fragment_buy_premium.xml
+++ b/src/main/res/layout/fragment_buy_premium.xml
@@ -23,7 +23,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp">
 
-                <com.topface.IllustratedTextView.IllustratedTextView
+                <TextView
                     android:id="@+id/payReasonFragmentBuyPremium"
                     style="@style/PayReasonView" />
 
