--- a/src/main/res/layout/retry_btn_blue.xml
+++ b/src/main/res/layout/retry_btn_blue.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.topface.IllustratedTextView.IllustratedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Widget.Topface.Button.Big.Blue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
