--- a/src/main/res/values-v17/style.xml
+++ b/src/main/res/values-v17/style.xml
@@ -30,4 +30,14 @@
         <item name="android:layout_marginStart">@dimen/offerwalls_button_margin_left</item>
         <item name="android:gravity">center_vertical|end</item>
     </style>
+
+    <style name="AlbumGift" parent="AlbumGiftBase">
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_marginEnd">@dimen/album_gift_margin_right</item>
+    </style>
+
+    <style name="AlbumDeleteButton" parent="AlbumDeleteButtonBase">
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_marginEnd">@dimen/album_delete_button_margin_right</item>
+    </style>
 </resources>
