--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -135,4 +135,11 @@
 
     <dimen name="user_status_side_margin">6dp</dimen>
 
+    <!--PhotoSwitcher-->
+    <dimen name="album_gift_margin_right">14dp</dimen>
+    <dimen name="album_gift_margin_bottom">14dp</dimen>
+    <dimen name="album_delete_button_padding">8dp</dimen>
+    <dimen name="album_delete_button_margin_right">18dp</dimen>
+    <dimen name="album_avatar_button_drawable_padding">4dp</dimen>
+
 </resources>
