--- a/src/main/res/layout/city_search_popup.xml
+++ b/src/main/res/layout/city_search_popup.xml
@@ -100,13 +100,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:paddingTop="15dp"
-            android:visibility="@{viewModel.getProgressVisibility(viewModel.isRequestInProgress)}" />
+            android:visibility="@{viewModel.isRequestInProgress}" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/city_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="@{viewModel.getProgressVisibility(!viewModel.isRequestInProgress)}" />
+            android:visibility="@{!viewModel.isRequestInProgress}" />
 
     </LinearLayout>
 </layout>
