--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -142,4 +142,6 @@
     <dimen name="album_delete_button_margin_right">18dp</dimen>
     <dimen name="album_avatar_button_drawable_padding">4dp</dimen>
 
+    <dimen name="album_buttons_size">26dp</dimen>
+
 </resources>
