--- a/src/main/res/layout/ac_photos.xml
+++ b/src/main/res/layout/ac_photos.xml
@@ -40,8 +40,7 @@
                 android:id="@+id/loBottomPanel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp">
+                android:layout_alignParentBottom="true">
 
                 <ImageButton
                     style="@style/AlbumButton.Avatar"
