--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1461,19 +1461,18 @@
     </style>
 
     <style name="AlbumButton">
-        <item name="android:layout_width">@dimen/album_buttons_size</item>
-        <item name="android:layout_height">@dimen/album_buttons_size</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:layout_centerVertical">true</item>
+        <item name="android:padding">18dp</item>
     </style>
 
     <style name="AlbumButton.Trash">
-        <item name="android:layout_marginRight">18dp</item>
         <item name="android:layout_alignParentRight">true</item>
     </style>
 
     <style name="AlbumButton.Avatar">
-        <item name="android:layout_marginLeft">18dp</item>
         <item name="android:layout_alignParentLeft">true</item>
     </style>
 </resources>
