--- a/src/main/res/layout/left_menu_header.xml
+++ b/src/main/res/layout/left_menu_header.xml
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="35dp"
                     android:ellipsize="end"
-                    android:lines="1"
+                    android:singleLine="true"
                     android:text="@{viewModel.userName}" />
 
                 <TextView
