--- a/src/main/res/drawable/filter_checkbox.xml
+++ b/src/main/res/drawable/filter_checkbox.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/checkbox_checked" android:state_checked="true" android:state_pressed="false" />
-    <item android:drawable="@drawable/checkbox_empty" android:state_checked="false" android:state_pressed="false" />
-    <item android:drawable="@drawable/checkbox_checked_act" android:state_checked="true" android:state_pressed="true" />
-    <item android:drawable="@drawable/checkbox_empty_act" android:state_checked="false" android:state_pressed="true" />
-    <item android:drawable="@drawable/checkbox_empty" />
+    <item android:drawable="@drawable/ic_checkbox_down" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_checkbox" />
 </selector>
