--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -130,8 +130,14 @@
     <dimen name="offerwalls_empty_view_between_text_and_image">60dp</dimen>
     <dimen name="offerwalls_empty_view_text_side_paddings">20dp</dimen>
 
+    <dimen name="elevation_value">3dp</dimen>
+
     <dimen name="city_item_height">64dp</dimen>
 
     <dimen name="user_status_side_margin">6dp</dimen>
+
+    <dimen name="filter_item_height">62dp</dimen>
+    <dimen name="filter_title_item_height">56dp</dimen>
+    <dimen name="filter_both_side_item_padding">16dp</dimen>
 
 </resources>
