--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -889,11 +889,9 @@
     <style name="FilterCheckBox" parent="topfaceCheckbox">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_marginLeft">11dp</item>
-        <item name="android:drawablePadding">4dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">#333333</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:textColor">@color/filter_item_text_color</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:drawableLeft">@drawable/filter_checkbox</item>
     </style>
 
@@ -1427,5 +1425,32 @@
         <item name="android:paddingRight">@dimen/offerwalls_button_padding_right</item>
         <item name="android:layout_marginLeft">@dimen/offerwalls_button_margin_left</item>
         <item name="android:gravity">center_vertical|right</item>
+    </style>
+
+    <style name="FilterItemTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/filter_item_text_color</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="FilterItemTextStyle.Title">
+        <item name="android:textColor">@color/filter_item_title_text_color</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
+    <style name="FilterSwitch">
+        <item name="android:button">@null</item>
+        <item name="android:drawableLeft">@null</item>
+        <item name="android:drawableRight">@drawable/edit_switch</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/filter_item_height</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:clickable">true</item>
+        <item name="android:paddingLeft">@dimen/filter_both_side_item_padding</item>
+        <item name="android:paddingRight">@dimen/filter_both_side_item_padding</item>
     </style>
 </resources>
